# all-about-llms

./: .gitignore  README.md  SESSION.md  TEACHING-STYLE.md  pyproject.toml
src/tokenizer/: README.md  tokenizer.py
src/transformer/: attention.py  benchmark_inference.py  embedding_table.py  inference.py  kv_cache.py  model.py  multi_layer_perceptron.py  rope.py  trainer.py  transformer.py
tokenizer/: pre_tokenizer.py  train.py
wiki/: README.md  gpu-one-big-matmul.md
wiki/foundations/: 01-floating-point.md  02-binary-fractions.md  03-tensors-basics.md  04-memory-layout.md  05-range-vs-precision.md  06-half-precision-dtypes.md  07-why-no-bf24.md  08-views-memory-gotchas.md  09-contiguous-view-reshape.md  10-einops.md  14-backward-pass-intro.md  15-backward-pass-worked-through.md  16-6nd-rule.md  17-pytorch-autograd-mechanics.md  18-pytorch-optimizer-api.md  19-adagrad-walkthrough.md  20-training-memory-four-components.md  21-gradient-accumulation.md  22-activation-checkpointing.md  23-lr-schedule.md
wiki/gpu/: 01-compute-vs-memory.md  02-hardware-anatomy.md  03-arithmetic-intensity.md  04-why-decode-is-memory-bound.md  05-llama-7b-decode-walkthrough.md  vllm-learning-plan.md
wiki/pytorch/: 01-ops-vectorization.md  05-cross-entropy.md  06-training-loop-calls.md  07-debugging-tools.md
wiki/transformer-primer/: 03-weight-initialization.md  04-attention-motivation.md  05-attention-qkv.md  06-attention-scores.md  07-attention-softmax.md  08-attention-output-and-scaled-formula.md  09-multi-head-attention.md  10-causal-mask.md  11-mlp-feedforward.md  18-kv-cache.md  (+7 more)
