[project]
name = "all-about-llms"
version = "0.1.0"
description = "A transformer language model and BPE tokenizer, built from scratch."
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.0",
    "numpy>=2.4.4",
    "regex>=2026.4.4",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenizer", "src/transformer"]
